fix align-items from left to stretch
in mobile.module.css

--- a/gatsby/src/styles/navbar/mobile.module.css
+++ b/gatsby/src/styles/navbar/mobile.module.css
@@ -29,7 +29,7 @@
       left: 0;
       box-sizing: border-box;
       justify-content: flex-start;
-      align-items: left;
+      align-items: stretch;
       padding: 2rem 1rem 0 1rem;
       row-gap: 2rem;
       height: 100%;
